# ESPS3-Glucose-Monitor

./: .gitignore  CMakeLists.txt  README.md  convert_image.py  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build-and-release.yml
main/: CMakeLists.txt  config.h  display.c  display.h  global_settings.c  global_settings.h  idf_component.yml  ir_remote_config.h  ir_transmitter.c  ir_transmitter.h  libre_config.h  libre_credentials.c  libre_credentials.h  librelinkup.c  librelinkup.h  main.c  ota_update.c  ota_update.h  random_quotes.json  splash_image.h  wifi_manager.c  wifi_manager.h
